--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A component collect",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cm": "git-cz"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,14 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
